--- a/gruvbox_dark.conf
+++ b/gruvbox_dark.conf
@@ -10,7 +10,7 @@ foreground #ebdbb2
 selection_foreground #928374
 selection_background #3c3836
 
-# 229_fg0, bg0_s
+# 229_fg0, 236_bg0_s
 cursor            #fbf1c7
 cursor_text_color #32302f
 
@@ -21,29 +21,29 @@ url_color #fe8019
 color0 #282828
 color8 #665c54
 
-# 124_red
+# 124_red, 167_red
 color1 #cc241d
-color9 #cc241d
+color9 #fb4934
 
-# 106_green
+# 106_green, 142_green
 color2  #98971a
-color10 #98971a
+color10 #b8bb26
 
-# 172_yellow
+# 172_yellow, 214_yellow
 color3  #d79921
-color11 #d79921
+color11 #fabd2f
 
-# 72_aqua, 189_blue
+# 72_aqua, 109_blue
 color4  #689d6a
 color12 #83a598
 
-# 132_purple
+# 132_purple, 175_purple
 color5  #b16286
-color13 #b16286
+color13 #d3869b
 
-# 72_aqua
+# 72_aqua, 108_aqua
 color6  #689d6a
-color14 #689d6a
+color14 #8ec07c
 
 # 246_gray, 245_gray
 color7  #a89984
