--- a/gruvbox_light.conf
+++ b/gruvbox_light.conf
@@ -21,29 +21,29 @@ url_color #af3a03
 color0 #fbf1c7
 color8 #665c54
 
-# 124_red
+# 124_red, 88_red
 color1 #cc241d
-color9 #cc241d
+color9 #9d0006
 
-# 106_green
+# 106_green, 100_green
 color2  #98971a
-color10 #98971a
+color10 #79740e
 
-# 172_yellow
+# 172_yellow, 136_yellow
 color3  #d79921
-color11 #d79921
+color11 #b57614
 
 # 72_aqua, 24_blue
 color4  #689d6a
 color12 #076678
 
-# 132_purple
+# 132_purple, 96_purple
 color5  #b16286
-color13 #b16286
+color13 #8f3f71
 
-# 72_aqua
+# 72_aqua, 66_aqua
 color6  #689d6a
-color14 #689d6a
+color14 #427b58
 
 # 243_gray, 244_gray
 color7  #7c6f64
